PBSmodelling Changes
====================
2.21  2009-08-16
	- fixed case sensitive issues for runExamples (linux support)
	- fixed title issue in description file
	- added warning when bwidget and tktable tk packages are missing
2.20  2009-08-07
	- Inroduced three new widget objects: 'droplist', 'spinbox', 'table'.
	  These can be demoed via testWidgets()
	- read/write list bug fix for array objects (introduced dimnames arg)
	- label widget text can be modified by get/setWinVal (and has a new name argument)
	- converted runDemos to use droplist widget (to allow for packages with many examples which can overflow screen height)
	- widgets can be disabled with setWidgetState
	- history widget next/prev buttons get disabled when index reaches either end
	- getWinVal no longer returns factors, and converts to character instead
	- object widget has scrollable rows, see rowshow argument
	- updated resetGraph
	- changed vector labelling behaviour - to only label indexes when no label is given and only one name is given
	- introduced 'include' widget for including window description files from other description files
	- history widget caption - see text and textsize arguments
	- openFile works on OSX, gnome

2.11  2009-06-08  Alex
    - Alex migrated PBSmodelling to googlecode.com's SVN system.

2.10  2009-05-14  Rowan
  - Added Norm's functions for clearing ('clearRcon')and focusing on ('focusRcon') the R console.
  - Revised Rd files to include original authors of all functions.
  - Revised 'packList()' to deal composite expressions in recursive list objects (lists within lists within lists...).

2.09  2009-05-01  Rowan
  - Transferred function 'clipVector()' from PBSfishery to PBSmodelling.
  - Revised 'packList()' to deal with composite expressions (calls, expressions, etc.) within list objects (see 'deparse()').

2.08  2009-04-21  Rowan
  - Revised (yet again) 'RmakePDF.bat' to follow the R developers' shifting code.
  - Fixed bug in '.doClean()'.